--- a/css/EU_ETS_Dashboard_styles.css
+++ b/css/EU_ETS_Dashboard_styles.css
@@ -22,19 +22,34 @@
     height: 350px;
 }
 
+html,
 body {
-    background-color: #f8f8f8;
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+  background-color: #f8f8f8;    
 }
 
+body{
+    margin-bottom: 40px;
+    margin-top: 0;
+    position: relative;
+}
 
 #wrapper {
-    width: 100%;
+    min-height: 100%;
+    height: auto;
+    /* Negative indent footer by its height 
+    margin: 0 auto -60px;*/
+    /* Pad bottom by footer height 
+    padding: 0 0 60px;*/
 }
 
 #page-wrapper {
-    padding: 0 15px;
-    min-height: 568px;
+    min-height: 100%;
+    height: auto;
     background-color: #f8f8f8;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .mapcluster {  
@@ -44,13 +59,25 @@ body {
   padding-top: 10px;
 }
 
-.footer {
+footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 40px;
   background-color: #f5f5f5;
 }
+
+.welcome_dialog_disclaimer{
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 100px;
+}
+
+row{
+    min-height: 100%;
+    height: auto;
+}
+
 
 
