--- a/css/EU_ETS_Dashboard_styles.css
+++ b/css/EU_ETS_Dashboard_styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 body{
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     margin-top: 0;
     position: relative;
 }
@@ -51,6 +51,7 @@ body{
     background-color: #f8f8f8;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 40px;
 }
 
 .mapcluster {  
@@ -65,7 +66,7 @@ footer {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 40px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .welcome_dialog_disclaimer{
@@ -82,6 +83,7 @@ row{
 #countries_sectors_row{
     padding-bottom: 10px;
 }
+
 
 
 
