fix at map when Power Installations are selected. Loader for Country Sector view improved.

--- a/css/EU_ETS_Dashboard_styles.css
+++ b/css/EU_ETS_Dashboard_styles.css
@@ -101,3 +101,8 @@ row{
     margin-left: -50px;
     list-style: none;
 }
+
+#data_loaded_country_sector_list{
+    margin-left: -50px;
+    list-style: none;
+}
