New chart added at Data per period view

--- a/css/EU_ETS_Dashboard_styles.css
+++ b/css/EU_ETS_Dashboard_styles.css
@@ -72,7 +72,8 @@ footer {
 .welcome_dialog_disclaimer{
     overflow: scroll;
     overflow-x: hidden;
-    height: 100px;
+    height: 35px;
+    font-size: 10px;
 }
 
 row{
